--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
       name="description"
       content="Experience high-fidelity sound, active noise cancellation, and luxurious comfort with our premium headphones. Designed for music lovers who demand the best."
     />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://zenith-pearl.vercel.app/" />
+    <meta property="og:title" content="Zenith — Premium Headphones" />
+    <meta
+      property="og:description"
+      content="Experience high-fidelity sound, active noise cancellation, and luxurious comfort with our premium headphones."
+    />
+    <meta property="og:url" content="https://zenith-pearl.vercel.app/" />
+    <meta property="og:type" content="website" />
     <title>Zenith</title>
   </head>
   <body>
